Update Main.java
Виправлено!